# data-fetcher

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/data_fetcher/: __init__.py  fetcher.py  processor.py
src/retry_lib/: __init__.py  retry.py
tests/: test_fetcher.py  test_processor.py  test_retry.py
