[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-fetcher"
version = "0.1.0"
description = "Python library to fetch and process JSON data from public APIs."
authors = [
    { name = "André Luiz", email = "your_email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
